--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <a href="#contact">Contact</a>
     </nav>
     <div class="title">
-        Your Cafe's Special Blend
+        Cat Cafe's Special Blend
     </div>
     <section id="about" class="about">
         <h2>About Us</h2>
