--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             color: #333;
         }
         header {
-            background-color: #c49a6c;
+            background-color: burlywood;
             padding: 20px;
             text-align: center;
             color: white;
@@ -29,12 +29,13 @@
             text-decoration: none;
             text-transform: uppercase;
             font-weight: bold;
+            font-size: 30px;
         }
         nav a:hover {
             background-color: #575757;
         }
         .title {
-            background-image: url('https://w.wallhaven.cc/full/md/wallhaven-mdpzq8.jpg');
+            background-image: url('https://w.wallhaven.cc/full/4l/wallhaven-4leqg2.jpg');
             height: 500px;
             background-position: center;
             background-repeat: no-repeat;
@@ -66,6 +67,7 @@
             color: white;
             padding: 10px 0;
             text-align: center;
+            font-family: Georgia, 'Times New Roman', Times, serif;
         }
     </style>
 </head>
@@ -75,9 +77,9 @@
         <p>Serving the best coffee and treats in town, with <b>CATS!</b></p>
     </header>
     <nav>
-        <a href="#about">About Us</a>
-        <a href="#menu">Menu</a>
-        <a href="#contact">Contact</a>
+        <a href="#about"><sup>About Us</sup></a>
+        <a href="#menu"><sup>Menu </sup></a>
+        <a href="#contact"><sup>Contact</sup></a>
     </nav>
     <div class="title">
         Cat Cafe's Special Blend
@@ -88,11 +90,11 @@
     </section>
     <section id="menu" class="menu">
         <h2>Our Menu</h2>
-        <img src="" alt="Coffee Image">
+        <img src="https://img.cdn-pictorem.com/uploads/collection/O/OT4LEN2GPB/900_Tim-A-Rowland_cat_gray_in_bathrobe_holding_tea_or_coffee.jpg" alt="Coffee Image" width="390px">
         <p>Explore our selection of freshly brewed coffee, gourmet sandwiches, and homemade desserts. Whether you're here for breakfast or an afternoon snack, we have something for everyone!</p>
     </section>
     <footer>
-        <p>&copy; 2024  | Designed with ♥ by Yash & Ashraff</p>
+        <p>&copy; WD Project 2024  | Designed with ♥ by Yash & Ashraff</p>
     </footer>
 </body>
 </html>
