--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cat Cafe</title>
+    <title>Chonky Cats Cafe</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -73,7 +73,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to our Cat Cafe</h1>
+        <h1>Welcome to Chonky Cats Cafe</h1>
         <p>Serving the best coffee and treats in town, with <b>CATS!</b></p>
     </header>
     <nav>
@@ -82,11 +82,11 @@
         <a href="#contact"><sup>Contact</sup></a>
     </nav>
     <div class="title">
-        Cat Cafe's Special Blend
+        CCC's Special Blend!!
     </div>
     <section id="about" class="about">
         <h2>About Us</h2>
-        <p>Cat Cafe is a cozy coffee shop located in the heart of the city. We specialize in handcrafted coffee, delicious pastries, and a warm, welcoming atmosphere. Come relax with us!</p>
+        <p>CCC [chonky cat cafe] is a cozy coffee shop located in the heart of the city. We specialize in handcrafted coffee, delicious pastries, and a warm, welcoming atmosphere. Come relax with us!</p>
     </section>
     <section id="menu" class="menu">
         <h2>Our Menu</h2>
