--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </header>
     <nav>
         <a href="#about"><sup>About Us</sup></a>
-        <a href="#menu"><sup>Menu </sup></a>
+        <a href="menu.html"><sup>Shop </sup></a>
         <a href="#contact"><sup>Contact</sup></a>
     </nav>
     <div class="title">
