--- a/menu.html
+++ b/menu.html
@@ -140,6 +140,20 @@
         <button type="submit">Submit Order</button>
     </form>
     <div id="orderSummary"></div>
-    <script src="script.js"></script>
+    <script>
+    document.querySelector(".order-form").addEventListener("submit", function(event) {
+        event.preventDefault(); 
+        const name = document.getElementById("name").value;
+        const order = document.getElementById("order").value;
+        const size = document.getElementById("size").value;
+        const quantity = document.getElementById("quantity").value;
+        const notes = document.getElementById("notes").value || "No special instructions";
+        let summary = `Thank you, ${name}! Your order for ${quantity} ${size} ${order}(s) has been placed. Special Instructions: ${notes}`;
+        alert(summary);
+        document.getElementById("orderSummary").innerHTML = `<h2>Order Summary</h2><p>${summary}</p>`;
+    });
+</script>
+
+    </script>
 </body>
 </html>
