--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Chonky Cats Cafe</h1>
+        <h1>Welcome to Chonky Cats Café</h1>
         <p>Serving the best coffee and treats in town, with <b>CATS!</b></p>
     </header>
     <nav>
-        <a href="#about"><sup>About Us</sup></a>
+        <a href="aboutus.html"><sup>About Us</sup></a>
         <a href="menu.html"><sup>Shop </sup></a>
         <a href="#contact"><sup>Contact</sup></a>
     </nav>
@@ -86,7 +86,7 @@
     </div>
     <section id="about" class="about">
         <h2>About Us</h2>
-        <p>CCC [chonky cat cafe] is a cozy coffee shop located in the heart of the city. We specialize in handcrafted coffee, delicious pastries, and a warm, welcoming atmosphere. Come relax with us!</p>
+        <p>CCC [chonky cat café] is a cozy coffee shop located in the heart of the city. We specialize in handcrafted coffee, delicious pastries, and a warm, welcoming atmosphere. Come relax with us!</p>
     </section>
     <section id="menu" class="menu">
         <h2>Our Menu</h2>
