--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <nav>
         <a href="aboutus.html"><sup>About Us</sup></a>
         <a href="menu.html"><sup>Shop </sup></a>
-        <a href="#contact"><sup>Contact</sup></a>
+        <a href="contact.html"><sup>Contact</sup></a>
     </nav>
     <div class="title">
         CCC's Special Blend!!
