--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     function askForForgiveness() {
       createFloatingHearts();
-      alert('OMG THANK YOU SO MUCH! I LOVE YOU SO MUCH, AND I WOULD NEVER BE MAD AT YOU BECAUSE YOU ARE A GODDESS TO ME! Aap se khubsurat haseena maine aaj tak nahi dekha hu nahi dhundne wala hu, tumhare liye jaan bhi haazir meri jaan! 😭😭😭😭');
+      alert('OMG THANK YOU SO MUCH! I LOVE YOU SO MUCH, AND I WOULD NEVER BE MAD AT YOU BECAUSE YOU ARE A GODDESS TO ME! Aap se khubsurat haseena maine aaj tak nahi dekha hu & kabhi dhundne wala bhi nahi hu, tumhare liye jaan bhi haazir meri jaan! 😭😭😭😭');
     }
 
     function imStillMad() {
